# libcanon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  libcanon-config.cmake
_codeql_build_dir/include/: Makefile  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  eldag_test  partition_test  string_test
_codeql_build_dir/test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-release/Testing/Temporary/: CTestCostData.txt
build-release/include/: Makefile  cmake_install.cmake
build-release/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  eldag_test  partition_test  string_test
build-release/test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  libcanon.pc
build-test/Testing/Temporary/: CTestCostData.txt
build-test/include/: Makefile  cmake_install.cmake
build-test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  partition_test  string_test
build-test/test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: CMakeLists.txt
include/libcanon/: canon.h  eldag.h  perm.h  utils.h
test/: CMakeLists.txt  eldag_test.cpp
(+9 files in other folders)
